# pokemon-api

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
.github/workflows/: build-containers.yaml
src/: cache.rs  docs.rs  empty_error.rs  json_error.rs  jwt_stuff.rs  macros.rs  main.rs  req_caching.rs  req_util.rs
src/models/: mod.rs  pokemon.rs  pokemon_pictures.rs
src/models/remote_api/: mod.rs  pokemon.rs  pokemon_list.rs  pokemon_sprites.rs
src/paths/: mod.rs
src/paths/pokemon/: get_all.rs  get_by_name.rs  get_random.rs  mod.rs
src/queries/: get_all_pokemons.graphql  get_pokemon.graphql  mod.rs
