[package]
name = "pokemon-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.9.0"
actix-web-grants = { git = "https://github.com/HANDZCZ/protect-endpoints", rev = "968fa6b" }
futures = "0.3.31"
jsonwebtoken = "9.3.0"
paste = "1.0.15"
rand = "0.8.5"
reqwest = { version = "0.12.8", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.128", features = ["raw_value"] }
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
utoipa = { git = "https://github.com/HANDZCZ/utoipa.git", rev = "f83cec4", features = ["actix_extras"] }
